Correct spacing for layout padding top

--- a/app/browser/views/Layout/Layout.css
+++ b/app/browser/views/Layout/Layout.css
@@ -7,7 +7,7 @@
     "banner banner"
     "sidebar body"
   ;
-  padding-top: 50px;
+  padding-top: 55px;
 }
 
 .Grid-cell--header {
